update business partner apis
